--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -7,5 +7,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.1"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.1"/>
     <PackageReference Include="Newtonsoft.Json" Version="*"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.1"/>
   </ItemGroup>
 </Project>
